infra/data_retrieval_infra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: david-eini12-dev
  name: data-retrieval
spec:
  selector:
    matchLabels:
      app: data-retrieval
  replicas: 1
  template:
    metadata:
      labels:
        app: data-retrieval
    spec:
      containers:
        - name: data-retrieval
          image: #########################################################
          ports:
            - containerPort: 8080
              protocol: TCP
