infra/data_retrieval_infra/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-retrieval-svc
  namespace: david-eini12-dev
spec:
  selector:
    app: data-retrieval
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
